# lunasvg-python

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt  pyproject.toml
.github/workflows/: main.yml
source/: __init__.py  __init__.pyi  __main__.py  module.cpp
subprojects/: lunasvg.wrap
