[project]
name = 'lunasvg'
description = 'SVG rendering library'
readme = 'README.md'
requires-python = '>=3.8'
keywords = ['svg', 'png', 'svg2png']
dynamic = ['version']
license = {file = 'LICENSE'}
authors = [
    {name = 'Samuel Ugochukwu', email = 'sammycageagle@gmail.com'},
]

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Multimedia :: Graphics :: Graphics Conversion',
    'Topic :: Multimedia :: Graphics :: Presentation',
    'Topic :: Text Processing :: Markup :: XML'
]

[project.urls]
homepage = 'https://github.com/sammycage/lunasvg'
code = 'https://github.com/sammycage/lunasvg-python'
issues = 'https://github.com/sammycage/lunasvg-python/issues'
donation = 'https://www.paypal.com/paypalme/sammycage'

[project.scripts]
lunasvg = 'lunasvg.__main__:main'

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[tool.meson-python.args]
setup = ['--default-library=static']
install = ['--skip-subprojects']
